--- a/src/views/pages/historicoMovimentacao.ejs
+++ b/src/views/pages/historicoMovimentacao.ejs
@@ -1,122 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Histórico de Movimentação</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico"
-    type="image/x-png" />
-  <style>
-    .table-container {
-      max-height: 600px;
-      overflow-y: auto;
-      overflow-x: hidden;
-    }
+<%- include('../partials/head', { title: 'Histórico de Movimentações' }) %>
 
-    .table-container table {
-      width: 100%;
-      table-layout: fixed;
-    }
-
-    .table-container th,
-    .table-container td {
-      word-wrap: break-word;
-      white-space: nowrap;
-    }
-
-    .table-container thead th {
-      position: sticky;
-      top: 0;
-      background-color: #fff;
-      z-index: 1;
-    }
-
-    .table-container th.tipo {
-      width: 6%;
-    }
-
-    .table-container th.data {
-      width: 10%;
-    }
-
-    .table-container th.quantidade {
-      width: 10%;
-    }
-
-    .w-90 {
-      width: 90%;
-    }
-  </style>
-</head>
-
-<body>
-  <%- include('../partials/header') %>
-  
-    <div class="caixa w-90 p-4 mx-auto">
-
-      <div class="row d-flex justify-content-center mb-4">
-        <div class="col-md-1 ">
-          <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0">Entradas / Saida</a>
-        </div>
-        <div class="col-md-1 ">
-          <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
-        </div>
-        <div class="col-md-1 ">
-          <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Histórico</a>
-        </div>
-      </div>
-
-      <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
-        <div class="table-container">
-          <div class="row">
-            <div class="mb-3 px-3">
-              <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success">
-                Histórico de Movimentações </h2>
-            </div>
-          </div>
-        </div>
-        <div class="table-container">
-          <div id="historico-movimentacao" class="mt-3"></div>
-        </div>
-      </div>
-    </div>
-
-    <script>
-      async function carregarHistoricoMovimentacao() {
-        const response = await fetch('/historico-movimentacao');
-        const data = await response.json();
-        const historicoDiv = document.getElementById('historico-movimentacao');
-        historicoDiv.innerHTML = `
-        <table class="table table-striped table-hover mb-0">
-          <thead class="teste" >
-            <tr >
-              <th class="tipo text-center">Tipo</th>
-              <th class="data text-center">Data</th>
-              <th>Descrição</th>
-              <th class="quantidade text-center">Quantidade</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${data.map(item => `
-              <tr>
-                <td class="text-center">${item.tipo}</td>
-                <td class="text-center">${new Date(item.data).toLocaleDateString('pt-BR')}</td>
-                <td>${item.descricao}</td>
-                <td class="text-center">${item.quantidade}</td>
-              </tr>`).join('')}
-          </tbody>
-        </table>
-      `;
+   <style>
+      .table-container {
+         max-height: 600px;
+         overflow-y: auto;
+         overflow-x: hidden;
       }
 
-      window.onload = () => {
-        carregarHistoricoMovimentacao();
-      };
-    </script>
-</body>
+      .table-container table {
+         width: 100%;
+         table-layout: fixed;
+      }
+
+      .table-container th,
+      .table-container td {
+         word-wrap: break-word;
+         white-space: nowrap;
+      }
+
+      .table-container thead th {
+         position: sticky;
+         top: 0;
+         background-color: #fff;
+         z-index: 1;
+      }
+
+      .table-container th.tipo {
+         width: 6%;
+      }
+
+      .table-container th.data {
+         width: 10%;
+      }
+
+      .table-container th.quantidade {
+         width: 10%;
+      }
+
+      .w-90 {
+         width: 90%;
+      }
+   </style>
+
+   <body>
+      <%- include('../partials/header') %>
+
+      <div class="caixa w-90 p-4 mx-auto">
+
+         <div class="row d-flex justify-content-center mb-4">
+               <div class="col-md-1 ">
+                  <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0">Entradas / Saida</a>
+               </div>
+               <div class="col-md-1 ">
+                  <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
+               </div>
+               <div class="col-md-1 ">
+                  <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Histórico</a>
+               </div>
+         </div>
+
+         <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
+               <div class="table-container">
+                  <div class="row">
+                     <div class="mb-3 px-3">
+                           <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success"> Histórico de Movimentações </h2>
+                     </div>
+                  </div>
+               </div>
+               <div class="table-container">
+                  <div id="historico-movimentacao" class="mt-3"></div>
+               </div>
+         </div>
+      </div>
+
+      <script>
+         async function carregarHistoricoMovimentacao() {
+               const response = await fetch('/historico-movimentacao');
+               const data = await response.json();
+               const historicoDiv = document.getElementById('historico-movimentacao');
+               historicoDiv.innerHTML = `
+               <table class="table table-striped table-hover mb-0">
+                  <thead class="teste" >
+                  <tr >
+                     <th class="tipo text-center">Tipo</th>
+                     <th class="data text-center">Data</th>
+                     <th>Descrição</th>
+                     <th class="quantidade text-center">Quantidade</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  ${data.map(item => `
+                     <tr>
+                     <td class="text-center">${item.tipo}</td>
+                     <td class="text-center">${new Date(item.data).toLocaleDateString('pt-BR')}</td>
+                     <td>${item.descricao}</td>
+                     <td class="text-center">${item.quantidade}</td>
+                     </tr>`).join('')}
+                  </tbody>
+               </table>
+               `;
+         }
+
+         window.onload = () => {
+               carregarHistoricoMovimentacao();
+         };
+      </script>
+   </body>
 
 </html>
