--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pesquisa Avançada de Estoque</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
+<%- include('../partials/head', { title: 'Pesquisa Avançada' }) %>
 
   <style>
     .modal.fade .modal-dialog {
@@ -26,8 +19,13 @@
       display: flex;
       align-items: center;
     }
+
+    .w-90{
+      width: 100px;
+      margin-block: 1rem;
+    }
   </style>
-</head>
+
 
 <body>
   <%- include('../partials/header') %>
@@ -89,9 +87,9 @@
               </div>
           </div>
           <div class="row">
-            <div class="col-md-12 d-flex justify-content-between mt-4"> <button type="button"
-                class="btn btn-warning mx-1" id="btn-limpar">Limpar</button> <button type="submit"
-                class="btn btn-primary mx-1" id="btn-pesquisar">Pesquisar</button> </div>
+            <div class="col-md-12 d-flex justify-content-center mt-4"> <button type="button"
+                class="w-90 btn btn-warning mx-1" id="btn-limpar">Limpar</button> <button type="submit"
+                class="w-90 btn btn-primary mx-1" id="btn-pesquisar">Pesquisar</button> </div>
           </div>
           </form>
           <div class="row">
@@ -280,51 +278,50 @@
                   const valorReal = (valor) => parseFloat(valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
 
                   const modalHtml = `
-                  <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                      <div class="modal-content">
-                      <div class="modal-header bg-success text-white">
-                          <h3 class="modal-title ms-auto" id="infoTomboModalLabel">Informações do Tombo</h3>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body">
-                          <div class="card">
-                          <div class="card-body pb-0">
-                              <h5 class="card-title">${entrada.descricao}</h5>
-                              <p class="card-text">
-                              <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
-                              <strong>Tombo:</strong> ${entrada.tombo} <br/>
-                              <strong>Data de Entrada:</strong> ${dataEntradaFormatada} <br/>
-                              <strong>Categoria:</strong> ${entrada.categoria} <br/>
-                              <strong>Doc Origem:</strong> ${entrada.doc_origem} <br/>
-                              <strong>Estoque:</strong> ${entrada.estoque} <br/>
-                              <strong>Valor:</strong> ${valorReal(entrada.valor)} <br/>
-                              <strong>Situação:</strong> ${entrada.situacao} <br/>
-                              <strong>Observação:</strong> ${getObservacao(entrada)} <br/>
-                              <hr>
-                              ${saida ? `
-                              <h5 class="bg-danger text-white p-2">Dados da Saída</h5>
-                              <strong>Data de Saída:</strong> ${dataSaidaFormatada} <br/>
-                              <strong>Doc Saída:</strong> ${saida.doc_saida} <br/>
-                              <strong>Referência:</strong> ${saida.referencia} <br/>
-                              <strong>Destino:</strong> ${saida.destino.toUpperCase()} <br/>
-                              <strong>Posto/Graduação:</strong> ${saida.posto_graduacao.toUpperCase()} <br/>
-                              <strong>Matrícula Funcional:</strong> ${saida.mat_funcional} <br/>
-                              <strong>Telefone:</strong> ${saida.telefone} <br/>
-                              <strong>Nome Completo:</strong> ${saida.nome_completo} <br/>
-                              <strong>Observação de Saída:</strong> ${getObservacao(saida)} <br/> ` : `
-                              <h5 class="bg-secondary text-white p-2">Item consta no estoque, ainda não foi pago.</h5>`}
-                              </p>
-                          </div>
-                          </div>
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                      </div>
-                      </div>
-                  </div>
-                  </div>
-              `;
+                     <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                           <div class="modal-content">
+                              <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                 <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
+                                 <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                    <i class="fa fa-times fa-lg"></i>
+                                 </button>
+                              </div>
+                              <div class="modal-body">
+                                 <div class="card">
+                                    <div class="card-body pb-0">
+                                       <h5 class="card-title">${entrada.descricao}</h5>
+                                       <p class="card-text">
+                                          <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
+                                          <strong>Tombo:</strong> ${entrada.tombo} <br/>
+                                          <strong>Data de Entrada:</strong> ${dataEntradaFormatada} <br/>
+                                          <strong>Categoria:</strong> ${entrada.categoria} <br/>
+                                          <strong>Doc Origem:</strong> ${entrada.doc_origem} <br/>
+                                          <strong>Estoque:</strong> ${entrada.estoque} <br/>
+                                          <strong>Valor:</strong> ${valorReal(entrada.valor)} <br/>
+                                          <strong>Situação:</strong> ${entrada.situacao} <br/>
+                                          <strong>Observação:</strong> ${getObservacao(entrada)} <br/>
+                                          <hr>
+                                          ${saida ? `
+                                          <h5 class="bg-danger text-white p-2">Dados da Saída</h5>
+                                          <strong>Data de Saída:</strong> ${dataSaidaFormatada} <br/>
+                                          <strong>Doc Saída:</strong> ${saida.doc_saida} <br/>
+                                          <strong>Referência:</strong> ${saida.referencia} <br/>
+                                          <strong>Destino:</strong> ${saida.destino.toUpperCase()} <br/>
+                                          <strong>Posto/Graduação:</strong> ${saida.posto_graduacao.toUpperCase()} <br/>
+                                          <strong>Matrícula Funcional:</strong> ${saida.mat_funcional} <br/>
+                                          <strong>Telefone:</strong> ${saida.telefone} <br/>
+                                          <strong>Nome Completo:</strong> ${saida.nome_completo} <br/>
+                                          <strong>Observação de Saída:</strong> ${getObservacao(saida)} <br/> ` : `
+                                          <h5 class="bg-secondary text-white p-2">Item consta no estoque, ainda não foi pago.</h5>`}
+                                       </p>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  `;
 
                   const modalDiv = document.createElement('div');
                   modalDiv.innerHTML = modalHtml;
