--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -1,96 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Quantitativo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
-    <style>
-        .table-container {
-            max-height: 65vh;
-            overflow-y: auto;
-            overflow-x: hidden;
-        }
+<%- include('../partials/head', { title: 'Quantidade Disponível' }) %>
 
-        .table-container table {
-            width: 100%;
-        }
+   <style>
+      .table-container {
+         max-height: 65vh;
+         overflow-y: auto;
+         overflow-x: hidden;
+      }
 
-        .table-container th,
-        .table-container td {
-            word-wrap: break-word;
-            white-space: nowrap;
-            text-align: left;
-        }
+      .table-container table {
+         width: 100%;
+      }
 
-        .table-container thead th {
-            position: sticky;
-            top: 0;
-            background-color: #fff;
-            z-index: 1;
-        }
+      .table-container th,
+      .table-container td {
+         word-wrap: break-word;
+         white-space: nowrap;
+         text-align: left;
+      }
 
-        .w-90{
-            width: 90%;
-        }
-    </style>
-</head>
+      .table-container thead th {
+         position: sticky;
+         top: 0;
+         background-color: #fff;
+         z-index: 1;
+      }
 
-<body>
-    <%- include('../partials/header') %>
+      .w-90 {
+         width: 90%;
+      }
+   </style>
 
-    <div class="caixa w-90 p-4 mx-auto">
+   <body>
+      <%- include('../partials/header') %>
 
-        <div class="row d-flex justify-content-center mb-4">
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Geral</a>
-            </div>
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
-            </div>
-            <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
-            </div>
-            <div class="col-md-1 ms-3">
-                <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Quantitativo</a>
-            </div>
-        </div>
+      <div class="caixa w-90 p-4 mx-auto">
 
+         <div class="row d-flex justify-content-center mb-4">
+               <div class="col-md-1 ms-3">
+                  <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Geral</a>
+               </div>
+               <div class="col-md-1 ms-3">
+                  <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
+               </div>
+               <div class="col-md-1 ms-3">
+                  <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
+               </div>
+               <div class="col-md-1 ms-3">
+                  <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Quantitativo</a>
+               </div>
+         </div>
 
-        <div class="border caixa-externa p-4 shadow-sm rounded">
-            <div class="row align-items-center mb-3 px-3">
-                <h2 style="border-bottom: 4px solid orange;"
-                class="text-center text-white py-2 mt-0 fw-bold bg-success">Quantitativo</h2>
-            </div>
-            <div class="table-container">
-                <table class="table table-striped table-hover mb-0">
-                    <thead>
-                    <tr>
-                        <th>Descrição</th>
-                        <th class="text-center">Quantidade</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <% if (estoque.length > 0) { %>
-                        <% estoque.forEach(function (item) { %>
-                            <tr>
-                                <td class="py-1 text-start"> <%= item.descricao %> </td>
-                                <td class="py-1 text-center"> <%= item.quantidade %> </td>
-                            </tr>
-                        <% }); %>
-                    <% } else { %>
-                        <tr>
-                            <td colspan="2" class="text-center">Ainda não há itens cadastrados</td>
-                        </tr>
-                    <% } %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</body>
+         <div class="border caixa-externa p-4 shadow-sm rounded">
+               <div class="row align-items-center mb-3 px-3">
+                  <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success">Quantidade Disponível</h2>
+               </div>
+               <div class="table-container">
+                  <table class="table table-striped table-hover mb-0">
+                     <thead>
+                           <tr>
+                              <th>Descrição</th>
+                              <th class="text-center">Quantidade</th>
+                           </tr>
+                     </thead>
+                     <tbody>
+                           <% if (estoque.length> 0) { %>
+                              <% estoque.forEach(function (item) { %>
+                                 <tr>
+                                       <td class="py-1 text-start"> <%= item.descricao %> </td>
+                                       <td class="py-1 text-center"> <%= item.quantidade %> </td>
+                                 </tr>
+                              <% }); %>
+                           <% } else { %>
+
+                           <tr>
+                              <td colspan="2" class="text-center">Ainda não há itens cadastrados</td>
+                           </tr>
+                           <% } %>
+                     </tbody>
+                  </table>
+               </div>
+         </div>
+      </div>
+   </body>
+
 </html>
