--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico" type="image/x-png" />
-    <style>
-        .input-custom:focus {
-            outline: 0;
-            box-shadow: none !important;
-        }
-    </style>
-</head>
-<body>
-    <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
-        <div class="border p-4 py-5 rounded shadow-lg caixa-externa">
-            <h1 class="text-center display-6 fw-bold mb-4 text-success">Registrar</h1>
-            <hr>
-            <% if (erro) { %>
-                <div class="alert alert-danger">
-                    <%= erro %>
-                </div>
-            <% } %>
 
-            <% if (success) { %>
-                <div class="alert alert-success">
-                    <%= success %>
-                </div>
-                <script>
-                    setTimeout(function() {
-                        window.location.href = "/login";
-                    }, 2000);  // 2 segundos antes de redirecionar
-                </script>
-            <% } else { %>
-                <form action="/register" method="POST">
-                    <div class="form-group mb-3">
-                        <label for="user" class="form-label">Usuário</label>
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="bi bi-person"></i></span>
-                            <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
-                        </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label for="senha" class="form-label">Senha</label>
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                            <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" required>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
-                    </div>
-                </form>
-            <% } %>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        window.onload = function() {
-            document.getElementById('user').focus();
-        };
+<%- include('../partials/head', { title: 'Registrar novo usuário' }) %>
 
-        document.getElementById('user').addEventListener('input', function() {
-            this.value = this.value.toLowerCase();
-        });
-    </script>
-</body>
+   <style>
+      .input-custom:focus {
+         outline: 0;
+         box-shadow: none !important;
+      }
+   </style>
+
+   <body>
+      <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
+         <div class="border p-4 py-5 rounded shadow-lg caixa-externa">
+               <h1 class="text-center display-6 fw-bold mb-4 text-success">Registrar</h1>
+               <hr>
+               <% if (erro) { %>
+                  <div class="alert alert-danger">
+                     <%= erro %>
+                  </div>
+               <% } %>
+
+               <% if (success) { %>
+                  <div class="alert alert-success"> <%= success %> </div>
+
+                  <script>
+                     setTimeout(function () {
+                           window.location.href = "/login";
+                     }, 2000);  // 2 segundos antes de redirecionar
+                  </script>
+
+                  <% } else { %>
+                     <form action="/register" method="POST">
+                           <div class="form-group mb-3">
+                              <label for="user" class="form-label">Usuário</label>
+                              <div class="input-group">
+                                 <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                 <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
+                              </div>
+                           </div>
+                           <div class="form-group mb-3">
+                              <label for="senha" class="form-label">Senha</label>
+                              <div class="input-group">
+                                 <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                                 <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" required>
+                              </div>
+                           </div>
+                           <div class="d-flex justify-content-center">
+                              <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
+                           </div>
+                     </form>
+                  <% } %>
+               </div>
+         </div>
+
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+         
+         <script>
+         window.onload = function () {
+               document.getElementById('user').focus();
+         };
+
+         document.getElementById('user').addEventListener('input', function () {
+               this.value = this.value.toLowerCase();
+         });
+      </script>
+   </body>
+
 </html>
