--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -1,194 +1,196 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Itens Pagos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="https://www.sspds.ce.gov.br/wp-content/themes/ceara2017/favicon.ico"
-    type="image/x-png" />
-  <style>
-    .table-container {
-      max-height: 78vh;
-      overflow-y: auto;
-      overflow-x: hidden;
-    }
+<%- include('../partials/head', { title: 'Itens Pagos' }) %>
 
-    .table-container table {
-      width: 100%;
-    }
+   <style>
+      .table-container {
+         max-height: 78vh;
+         overflow-y: auto;
+         overflow-x: hidden;
+      }
 
-    .table-container th,
-    .table-container td {
-      word-break: break-word;
-    }
+      .table-container table {
+         width: 100%;
+      }
 
-    .table-container thead th {
-      position: sticky;
-      top: 0;
-      background-color: #fff;
-      z-index: 1;
-    }
+      .table-container th,
+      .table-container td {
+         word-break: break-word;
+      }
 
-    .btn-action {
-      width: 70px;
-    }
+      .table-container thead th {
+         position: sticky;
+         top: 0;
+         background-color: #fff;
+         z-index: 1;
+      }
 
-    .w-90 {
-      width: 90%;
-    }
-  </style>
-</head>
+      .btn-action {
+         width: 70px;
+      }
 
-<body>
-  <%- include('../partials/header') %>
+      .w-90 {
+         width: 90%;
+      }
+   </style>
 
-    <div class="caixa w-90 p-4 mx-auto">
-      <div class="row d-flex justify-content-center mb-4">
-        <div class="col-md-1 ">
-          <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 ">Entradas / Saida</a>
-        </div>
-        <div class="col-md-1 ">
-          <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active px-2 py-2">Itens pagos</a>
-        </div>
-        <div class="col-md-1 ">
-          <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold">Histórico</a>
-        </div>
+   <body>
+      <%- include('../partials/header') %>
+
+      <div class="caixa w-90 p-4 mx-auto">
+         <div class="row d-flex justify-content-center mb-4">
+            <div class="col-md-1 ">
+               <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 ">Entradas /
+                  Saida</a>
+            </div>
+            <div class="col-md-1 ">
+               <a href="/estoque/itenspagos"
+                  class="btn btn-outline-success w-100 btn-header fw-bold nav-link active px-2 py-2">Itens
+                  pagos</a>
+            </div>
+            <div class="col-md-1 ">
+               <a href="/historico-movimentacao-page"
+                  class="btn btn-outline-success w-100 btn-header fw-bold">Histórico</a>
+            </div>
+         </div>
+
+         <div class="border caixa-externa p-4 shadow-sm rounded">
+            <div class="row align-items-center mb-3 px-3">
+               <h2 style="border-bottom: 4px solid orange;"
+                  class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
+                  que saíram do estoque
+               </h2>
+            </div>
+            <div class="table-container">
+               <table class="table table-striped table-hover mb-0">
+                  <thead>
+                     <tr>
+                        <th class="text-center">ID</th>
+                        <th>Descrição</th>
+                        <th class="text-center">Data da Saída</th>
+                        <th class="text-center">Destino</th>
+                        <th class="text-center">Referência</th>
+                        <th class="text-center">Ações</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <% if (itensPagos.length> 0) { %>
+                        <% itensPagos.forEach(function(item) { %>
+                           <tr>
+                              <td class="py-1 text-center">
+                                 <%= item.id %>
+                              </td>
+                              <td class="py-1">
+                                 <%= item.descricao.toUpperCase() %>
+                              </td>
+                              <td class="py-1 text-center">
+                                 <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
+                              </td>
+                              <td class="py-1 text-center">
+                                 <%= item.destino.toUpperCase() %>
+                              </td>
+                              <td class="py-1 text-center">
+                                 <%= item.referencia.toUpperCase() %>
+                              </td>
+                              <td class="py-1 text-center w-10">
+                                 <button type="button" class="btn btn-secondary btn-sm btn-action"
+                                    data-id="<%= item.id %>">Detalhes</button>
+                              </td>
+                           </tr>
+                           <% }); %>
+                              <% } else { %>
+                        <tr>
+                           <td colspan="11" class="text-center">Ainda não há itens Pagos</td>
+                        </tr>
+                     <% } %>
+                  </tbody>
+               </table>
+            </div>
+         </div>
       </div>
 
-      <div class="border caixa-externa p-4 shadow-sm rounded">
-        <div class="row align-items-center mb-3 px-3">
-          <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
-            que saíram do estoque
-          </h2>
-        </div>
-        <div class="table-container">
-          <table class="table table-striped table-hover mb-0">
-            <thead>
-              <tr>
-                <th class="text-center">ID</th>
-                <th>Descrição</th>
-                <th class="text-center">Data da Saída</th>
-                <th class="text-center">Destino</th>
-                <th class="text-center">Referência</th>
-                <th class="text-center">Ações</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% if (itensPagos.length> 0) { %>
-                <% itensPagos.forEach(function(item) { %>
-                  <tr>
-                    <td class="py-1 text-center">
-                      <%= item.id %>
-                    </td>
-                    <td class="py-1">
-                      <%= item.descricao.toUpperCase() %>
-                    </td>
-                    <td class="py-1 text-center">
-                      <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
-                    </td>
-                    <td class="py-1 text-center">
-                      <%= item.destino.toUpperCase() %>
-                    </td>
-                    <td class="py-1 text-center">
-                      <%= item.referencia.toUpperCase() %>
-                    </td>
-                    <td class="py-1 text-center w-10">
-                      <button type="button" class="btn btn-secondary btn-sm btn-action"
-                        data-id="<%= item.id %>">Detalhes</button>
-                    </td>
-                  </tr>
-                  <% }); %>
-                    <% } else { %>
-                      <tr>
-                        <td colspan="11" class="text-center">Ainda não há itens Pagos</td>
-                      </tr>
-                      <% } %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+      <!-- JavaScript para exibição do modal -->
+      <script>
+         // JavaScript para exibição do modal
+         document.addEventListener('DOMContentLoaded', () => {
+            const viewButtons = document.querySelectorAll('.btn-action');
 
-    <!-- JavaScript para exibição do modal -->
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const viewButtons = document.querySelectorAll('.btn-action');
+            viewButtons.forEach(button => {
+               button.addEventListener('click', async (event) => {
+                  const itemId = event.target.getAttribute('data-id');
+                  const url = `/visualizar/itempago/${itemId}`;
+                  try {
+                     console.log("Fetching data for item ID:", itemId);
+                     const response = await fetch(url);
+                     if (!response.ok) {
+                        throw new Error(`ERRO: ${response.statusText.toUpperCase()}`);
+                     }
+                     const item = await response.json();
+                     console.log("Data fetched:", item);
 
-        viewButtons.forEach(button => {
-          button.addEventListener('click', async (event) => {
-            const itemId = event.target.getAttribute('data-id');
-            const url = `/visualizar/itempago/${itemId}`; // Usar a nova rota
+                     if (item) {
+                        // Alterando o tombo para usar o valor de tombo_estoqueatual
+                        item.tombo = item.tombo_estoqueatual;
 
-            try {
-              console.log("Fetching data for item ID:", itemId);
-              const response = await fetch(url);
-              if (!response.ok) {
-                throw new Error(`ERRO: ${response.statusText.toUpperCase()}`); // Mensagem de erro em UPPERCASE
-              }
-              const item = await response.json();
-              console.log("Data fetched:", item);
+                        const modalHtml = `
+                              <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                                    <div class="modal-content">
+                                       <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                       <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do item pago</h3>
+                                       <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                       <i class="fa fa-times fa-lg"></i>
+                                       </button>
+                                       </div>
+                                       <div class="modal-body">
+                                       <div class="card">
+                                          <div class="card-body pb-0">
+                                             <h5 class="card-title">${item.descricao}</h5>
+                                             <p class="card-text">
+                                                <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5> <!-- Texto da seção em UPPERCASE -->
+                                                <strong>TOMBO:</strong> ${item.tombo} <br/> <!-- Alterado para usar o valor correto -->
+                                                <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
+                                                <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/> <!-- Destino em UPPERCASE -->
+                                                <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
+                                                <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
+                                                <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
+                                                <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
+                                                <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
+                                                <strong>TELEFONE:</strong> ${item.telefone} <br/>
+                                                <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/> <!-- Texto específico sendo uppercase -->
+                                             </p>
+                                          </div>
+                                       </div>
+                                       </div>
+                                    </div>
+                                 </div>
+                           </div>
+                        `;
 
-              if (item) {
-                const modalHtml = `
-                  <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                      <div class="modal-content">
-                        <div class="modal-header bg-success text-white">
-                          <h3 class="modal-title ms-auto" id="infoTomboModalLabel">INFORMAÇÕES DO ITEM PAGO</h3> <!-- Título em UPPERCASE -->
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="card">
-                            <div class="card-body pb-0">
-                              <h5 class="card-title">${item.descricao}</h5>
-                              <p class="card-text">
-                                <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5> <!-- Texto da seção em UPPERCASE -->
-                                <strong>ID:</strong> ${item.id} <br/>
-                                <strong>TOMBO:</strong> ${item.tombo} <br/>
-                                <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
-                                <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/> <!-- Destino em UPPERCASE -->
-                                <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
-                                <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/> <!-- Texto específico sendo uppercase -->
-                                <hr>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="modal-footer d-flex justify-content-center">
-                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">FECHAR</button> <!-- Botão em UPPERCASE -->
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                `;
+                        const modalDiv = document.createElement('div');
+                        modalDiv.innerHTML = modalHtml;
+                        document.body.appendChild(modalDiv);
 
-                const modalDiv = document.createElement('div');
-                modalDiv.innerHTML = modalHtml;
-                document.body.appendChild(modalDiv);
+                        const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
+                           backdrop: true,
+                           focus: true
+                        });
 
-                const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
-                  backdrop: true,
-                  focus: true
-                });
+                        infoTomboModal.show();
 
-                infoTomboModal.show();
+                        infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
+                           modalDiv.remove();
+                        });
+                     }
+                  } catch (error) {
+                     console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
+                  }
+               });
+            });
+         });
 
-                infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
-                  modalDiv.remove();
-                });
-              }
-            } catch (error) {
-              console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase()); // Mensagem de erro em console em UPPERCASE
-            }
-          });
-        });
-      });
-
-    </script>
-</body>
+      </script>
+   </body>
 
 </html>
