ajustes de layout para notebook pt-01

--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -4,6 +4,20 @@
 <%- include('../partials/head', { title: 'Formulário de Saída' }) %>
 
    <style>
+
+      
+      *{
+         margin: 0;
+         padding: 0;
+      }
+
+      body {
+         display: flex;
+         align-items: center;
+         padding-top: 5.5rem;
+      }
+
+
       #tombos-container,
       #selected-tombos-container {
          overflow-y: scroll;
