--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -4,10 +4,18 @@
 <%- include('../partials/head', { title: 'Formulário de Entrada' }) %>
 
    <style>
+
+      *{
+         margin: 0;
+         padding: 0;
+      }
+
       body {
          display: flex;
          align-items: center;
+         padding-top: 5.5rem;
       }
+
    </style>
 
    <body>
