--- a/src/views/pages/historicoMovimentacao.ejs
+++ b/src/views/pages/historicoMovimentacao.ejs
@@ -4,6 +4,19 @@
 <%- include('../partials/head', { title: 'Histórico de Movimentações' }) %>
 
    <style>
+      * {
+         margin: 0;
+         padding: 0;
+      }
+
+      body {
+         padding-top: 2.5rem;
+      }
+
+      .botoes {
+         margin-bottom: 1.9rem;
+      }
+
       .table-container {
          max-height: 600px;
          overflow-y: auto;
@@ -48,36 +61,39 @@
    <body>
       <%- include('../partials/header') %>
 
-      <div class="caixa w-90 p-4 mx-auto">
+         <div class="caixa w-90 p-4 mx-auto">
 
-         <div class="row d-flex justify-content-center mb-4">
-               <div class="col-md-1 ">
-                  <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0">Entradas / Saida</a>
+            <div class="row d-flex justify-content-center botoes">
+               <div class="col-md-1 mx-3">
+                  <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 mx-3">Entradas /
+                     Saida</a>
                </div>
-               <div class="col-md-1 ">
-                  <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
+               <div class="col-md-1 mx-3">
+                  <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Itens pagos</a>
                </div>
-               <div class="col-md-1 ">
-                  <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Histórico</a>
+               <div class="col-md-1 mx-3">
+                  <a href="/historico-movimentacao-page"
+                     class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2 mx-3">Histórico</a>
                </div>
-         </div>
+            </div>
 
-         <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
+            <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
                <div class="table-container">
                   <div class="row">
                      <div class="mb-3 px-3">
-                           <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success"> Histórico de Movimentações </h2>
+                        <h2 style="border-bottom: 4px solid orange;"
+                           class="text-center text-white py-2 mt-0 fw-bold bg-success"> Histórico de Movimentações </h2>
                      </div>
                   </div>
                </div>
                <div class="table-container">
                   <div id="historico-movimentacao" class="mt-3"></div>
                </div>
+            </div>
          </div>
-      </div>
 
-      <script>
-         async function carregarHistoricoMovimentacao() {
+         <script>
+            async function carregarHistoricoMovimentacao() {
                const response = await fetch('/historico-movimentacao');
                const data = await response.json();
                const historicoDiv = document.getElementById('historico-movimentacao');
@@ -102,12 +118,12 @@
                   </tbody>
                </table>
                `;
-         }
+            }
 
-         window.onload = () => {
+            window.onload = () => {
                carregarHistoricoMovimentacao();
-         };
-      </script>
+            };
+         </script>
    </body>
 
 </html>
