--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -3,27 +3,39 @@
 
 <%- include('../partials/head', { title: 'Pesquisa Avançada' }) %>
 
-  <style>
-    .modal.fade .modal-dialog {
+   <style>
+
+   *{
+      margin: 0;
+      padding: 0;
+   }
+
+   body {
+      display: flex;
+      align-items: center;
+      padding-top: 5.5rem;
+   }
+
+      .modal.fade .modal-dialog {
       transition: transform 1s ease-in-out, opacity 5s ease-in-out;
       transform: translateY(-25%);
       opacity: 0;
-    }
+      }
 
-    .modal.show .modal-dialog {
+      .modal.show .modal-dialog {
       transform: translateY(0);
       opacity: 1;
-    }
+      }
 
-    body {
+      body {
       display: flex;
       align-items: center;
-    }
+      }
 
-    .w-90{
+      .w-90{
       width: 100px;
       margin-block: 1rem;
-    }
+      }
   </style>
 
 
