--- a/src/views/pages/relatorios.ejs
+++ b/src/views/pages/relatorios.ejs
@@ -4,6 +4,19 @@
 <%- include('../partials/head', { title: 'Relatório Quantitativo' }) %>
 
    <style>
+      * {
+         margin: 0;
+         padding: 0;
+      }
+
+      body {
+         padding-top: 2.5rem;
+      }
+
+      .botoes {
+         margin-bottom: 1.9rem;
+      }
+
       .w-90 {
          width: 90%;
       }
@@ -14,96 +27,98 @@
 
       <div class="caixa w-90 p-4 mx-auto">
 
-         <div class="row d-flex justify-content-center mb-4">
-               <div class="col-md-1 ">
-                  <a href="/relatorios"
-                     class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Entradas e Saida</a>
-               </div>
-               <div class="col-md-1 ">
-                  <a href="/estoque/itenspagos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens pagos</a>
-               </div>
-               <div class="col-md-1 ">
-                  <a href="/historico-movimentacao-page" class="btn btn-outline-success w-100 btn-header fw-bold">Histórico</a>
-               </div>
+         <div class="row d-flex justify-content-center botoes">
+            <div class="col-md-1 mx-3 ">
+               <a href="/relatorios"
+                  class="btn btn-outline-success btn-header fw-bold nav-link active py-2 mx-3">Entradas e Saida</a>
+            </div>
+            <div class="col-md-1 mx-3">
+               <a href="/estoque/itenspagos" class="btn btn-outline-success btn-header fw-bold mx-3">Itens pagos</a>
+            </div>
+            <div class="col-md-1 mx-3">
+               <a href="/historico-movimentacao-page"
+                  class="btn btn-outline-success btn-header fw-bold mx-3">Histórico</a>
+            </div>
          </div>
 
          <div class=" border caixa-externa p-4 shadow-sm rounded">
-               <div class="table-container">
-                  <div class="row">
-                     <div class="mb-3 px-3">
-                        <h2 style="border-bottom: 4px solid orange;" class="text-center text-white py-2 mt-0 fw-bold bg-success"> Relatório de Entradas e Saidas </h2>
-                     </div>
+            <div class="table-container">
+               <div class="row">
+                  <div class="mb-3 px-3">
+                     <h2 style="border-bottom: 4px solid orange;"
+                        class="text-center text-white py-2 mt-0 fw-bold bg-success"> Relatório de Entradas e Saidas
+                     </h2>
                   </div>
                </div>
-               <div class="table-container">
-                  <div class="row">
-                     <div class="col-md-6 mb-4 text-center">
-                        <h3>Entradas</h3>
-                        <hr>
-                        <div id="relatorio-entradas" class="mt-3"></div>
-                     </div>
-                     <div class="col-md-6 mb-4 text-center">
-                        <h3>Saídas</h3>
-                        <hr>
-                        <div id="relatorio-saidas" class="mt-3"></div>
-                     </div>
+            </div>
+            <div class="table-container">
+               <div class="row">
+                  <div class="col-md-6 mb-4 text-center">
+                     <h3>Entradas</h3>
+                     <hr>
+                     <div id="relatorio-entradas" class="mt-3"></div>
+                  </div>
+                  <div class="col-md-6 mb-4 text-center">
+                     <h3>Saídas</h3>
+                     <hr>
+                     <div id="relatorio-saidas" class="mt-3"></div>
                   </div>
                </div>
+            </div>
          </div>
       </div>
 
-
       <script>
          async function carregarRelatorioEntradas() {
-               const response = await fetch('/relatorio-entradas');
-               const data = await response.json();
-               const relatorioDiv = document.getElementById('relatorio-entradas');
-               relatorioDiv.innerHTML = `
-               <table class="table table-striped table-hover mb-0">
-                  <thead>
+            const response = await fetch('/relatorio-entradas');
+            const data = await response.json();
+            const relatorioDiv = document.getElementById('relatorio-entradas');
+            relatorioDiv.innerHTML = `
+            <table class="table table-striped table-hover mb-0">
+               <thead>
+               <tr>
+                  <th>Mês/Ano</th>
+                  <th>Total de Entradas</th>
+               </tr>
+               </thead>
+               <tbody>
+               ${data.map(item => `
                   <tr>
-                     <th>Mês/Ano</th>
-                     <th>Total de Entradas</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  ${data.map(item => `
-                     <tr>
-                     <td>${item.mes_ano}</td>
-                     <td>${item.total_entradas}</td>
-                     </tr>`).join('')}
-                  </tbody>
-               </table>
-               `;
+                  <td>${item.mes_ano}</td>
+                  <td>${item.total_entradas}</td>
+                  </tr>`).join('')}
+               </tbody>
+            </table>
+            `;
          }
 
          async function carregarRelatorioSaidas() {
-               const response = await fetch('/relatorio-saidas');
-               const data = await response.json();
-               const relatorioDiv = document.getElementById('relatorio-saidas');
-               relatorioDiv.innerHTML = `
-               <table class="table table-striped table-hover mb-0">
-                  <thead>
+            const response = await fetch('/relatorio-saidas');
+            const data = await response.json();
+            const relatorioDiv = document.getElementById('relatorio-saidas');
+            relatorioDiv.innerHTML = `
+            <table class="table table-striped table-hover mb-0">
+               <thead>
+               <tr>
+                  <th>Mês/Ano</th>
+                  <th>Total de Saídas</th>
+               </tr>
+               </thead>
+               <tbody>
+               ${data.map(item => `
                   <tr>
-                     <th>Mês/Ano</th>
-                     <th>Total de Saídas</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  ${data.map(item => `
-                     <tr>
-                     <td>${item.mes_ano}</td>
-                     <td>${item.total_saidas}</td>
-                     </tr>`).join('')}
-                  </tbody>
-               </table>
-               `;
+                  <td>${item.mes_ano}</td>
+                  <td>${item.total_saidas}</td>
+                  </tr>`).join('')}
+               </tbody>
+            </table>
+            `;
          }
 
          // Carregar os relatórios ao carregar a página
          window.onload = () => {
-               carregarRelatorioEntradas();
-               carregarRelatorioSaidas();
+            carregarRelatorioEntradas();
+            carregarRelatorioSaidas();
          };
 
       </script>
