testando mediaQuery pt-01

--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -101,7 +101,7 @@
           <div class="row">
             <div class="col-md-12 d-flex justify-content-center mt-4"> <button type="button"
                 class="w-90 btn btn-warning mx-1" id="btn-limpar">Limpar</button> <button type="submit"
-                class="w-90 btn btn-primary mx-1" id="btn-pesquisar">Pesquisar</button> </div>
+                class="w-90 btn btn-secondary mx-1" id="btn-pesquisar">Pesquisar</button> </div>
           </div>
           </form>
           <div class="row">
