--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -66,12 +66,12 @@
       }
 
          /* Media Query para notebooks */
-         @media (max-width: 1920px) {
+         @media (max-width: 1366px) {
             .table-container {
                max-height: 56vh;
+               background-color: aqua;
             }
          }
-         
    </style>
 
    <body>
@@ -81,16 +81,16 @@
 
          <div class="row d-flex justify-content-center botoes">
             <div class="col-md-1 mx-3">
-               <a href="/tabela/estoqueatual" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2 mx-3">Geral</a>
+               <a href="/tabela/estoqueatual" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2 ">Geral</a>
             </div>
             <div class="col-md-1 mx-3">
-               <a href="/tabela/itens-novos" class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Itens Novo</a>
+               <a href="/tabela/itens-novos" class="btn btn-outline-success w-100 btn-header fw-bold ">Itens Novo</a>
             </div>
             <div class="col-md-1 mx-3">
-               <a href="/tabela/itens-usados" class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Itens Usados</a>
+               <a href="/tabela/itens-usados" class="btn btn-outline-success w-100 btn-header fw-bold ">Itens Usados</a>
             </div>
             <div class="col-md-1 mx-3">
-               <a href="/qtde-unica" class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Quantitativo</a>
+               <a href="/qtde-unica" class="btn btn-outline-success w-100 btn-header fw-bold ">Quantitativo</a>
             </div>
          </div>
 
@@ -174,9 +174,11 @@
                               <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
                                  <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
                                  <div class="modal-content">
-                                    <div class="modal-header bg-success text-white">
-                                    <h3 class="modal-title ms-auto" id="infoTomboModalLabel">Informações do Tombo</h3>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                    <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
+                                    <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                       <i class="fa fa-times fa-lg"></i>
+                                    </button>
                                     </div>
                                     <div class="modal-body">
                                     <div class="card">
@@ -197,14 +199,10 @@
                                        </div>
                                     </div>
                                     </div>
-                                    <div class="modal-footer d-flex justify-content-center">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                                    </div>
                                  </div>
                               </div>
                            </div>
                         `;
-
 
                         const modalDiv = document.createElement('div');
                         modalDiv.innerHTML = modalHtml;
