testando mediaQuery pt-05

--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -67,34 +67,20 @@
       /* Media Query para notebooks */
       @media (max-width: 1366px) {
          .caixa-externa {
-            max-height: 67vh;
+            max-height: 74vh;
             background-color: aqua;
          }
 
          .table-container {
-            max-height: 52vh;
+            max-height: 55vh;
             overflow-y: auto;
             overflow-x: hidden;
-            min-height: 52vh;
+            min-height: 55vh;
          }
 
-         .table-container table {
-            width: 100%;
+         .botoes {
+            margin-bottom: 1rem;
          }
-
-         .table-container th,
-         .table-container td {
-            word-wrap: break-word;
-            white-space: nowrap;
-         }
-
-         .table-container thead th {
-            position: sticky;
-            top: 0;
-            background-color: #fff;
-            z-index: 1;
-         }
-
       }
    </style>
 
