refact: adaptação no javaScript da rota de saida para usar o nkrog

--- a/src/views/pages/tabelaItensUsados.ejs
+++ b/src/views/pages/tabelaItensUsados.ejs
@@ -67,7 +67,7 @@
       /* Media Query para notebooks */
       @media (max-width: 1366px) {
          .caixa-externa {
-            max-height: 74vh;
+            max-height: 73vh;
          }
 
          .table-container {
@@ -170,10 +170,10 @@
                               </tr>
                               <% }); %>
                                  <% } else { %>
-                                    <tr>
-                                       " <td colspan="11" class="text-center">Ainda não há itens cadastrados</td>
-                                    </tr>
-                                    <% } %>"
+                              <tr>
+                                 <td colspan="11" class="text-center">Ainda não há itens cadastrados</td>
+                            </tr>
+                        <% } %>
                      </tbody>
                   </table>
                </div>
